# klee

./: .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile.base  redis.conf
.travis/: klee.sh  protobuf.sh  redis.sh
cmake/modules/: Findcapnp.cmake  Findcpp_redis.cmake  Findprotobuf.cmake
include/klee/: CommandLine.h  Expr.h  Solver.h  SolverStats.h
lib/: CMakeLists.txt
lib/Basic/: CmdLineOptions.cpp  ConstructSolverChain.cpp
lib/Core/: StatsTracker.cpp
lib/Expr/: Assigment.cpp  CMakeLists.txt  Cache.pb.cc  Cache.proto  Expr.cpp  Updates.cpp  cache_cap.capnp  cache_cap.capnp.cpp  cache_cap.capnp.h
lib/Solver/: AlgebraComparisonNormalizer.cpp  CMakeLists.txt  CexCachingSolver.cpp  IndependentSolver.cpp  NameNormalizer.cpp  NameNormalizerSolver.cpp  PersistentCachingSolver.cpp  PersistentCachingSolver.h  SolverStats.cpp
lib/klee-pcache/: AlgebraComparisonNormalizer.cpp  AlgebraComparisonNormalizer.h  CMakeLists.txt  ExactMatchFinder.cpp  ExactMatchFinder.h  Finder.h  NameNormalizer.cpp  NameNormalizer.h  NameNormalizerFinder.cpp  NameNormalizerFinder.h  PersistentMapOfSets.cpp  PersistentMapOfSets.h  PersistentMapOfSetsFinder.cpp  PersistentMapOfSetsFinder.h  Predicates.h  RedisFinder.cpp  RedisFinder.h  RedisInstance.cpp  RedisInstance.h  Storage.h  SubSupersetFinder.cpp  SubSupersetFinder.h  Trie.cpp  Trie.h  TrieFinder.cpp  TrieFinder.h
test/CXX/: ArrayNew.cpp  New.cpp  SimpleVirtual.cpp  StaticConstructor.cpp  StaticDestructor.cpp  Trivial.cpp
test/Concrete/: ConcreteTest.py
test/Coverage/: ReadArgs.c  ReplayOutDir.c
test/Dogfood/: ImmutableSet.cpp
test/Feature/: AddressOfLabels.c  Alias.c  AliasFunction.c  AliasFunctionExit.c  BFSSearcher.c  BFSSearcherAndDFSSearcherInterleaved.c  BitcastAlias.ll  BitcastAliasMD2U.ll  ByteSwap.c  CallToUndefinedExternal.cpp  CheckForImpliedValue.c.failing  CheckMemoryAccess.c  CompressedExprLogging.c  ConstExprWithDivZero.ll  ConstExprWithOvershift.ll  ConstantArray.ll  ConstantStruct.ll  CopyOnWrite.c  DanglingConcreteReadExpr.c  DefineFixedObject.c  DeterministicSwitch.c  DoubleFree.c  DumpStatesOnHalt.c  EntryPoint.c  Envp.c  ExitOnErrorType.c  ExprLogging.c  ExternalWeakLinkage.c  Float.c  FloatingPt.c  FunctionPointer.c  GetElementPtr.ll  GetValue.c  InAndOutOfBounds.c  IndirectCallToBuiltin.c  IndirectCallToExternal.c  InsertExtractValue.ll  IntrinsicTrap.ll  IsSymbolic.c  KleeReportError.c  (+47 more)
test/Intrinsics/: objectsize.ll
test/Merging/: batching_break.c  easy_merge.c  indirect_value.c  loop_merge.c  merge_fail.c  nested_merge.c  split_merge.c  unexpected_close.c
test/Programs/: pcregrep.c
test/Solver/: 2016-04-12-array-parsing-bug.kquery  LargeIntegers.kquery  Z3ConstantArray.c  Z3LargeConstantArray.kquery  overshift-lright-by-constant.kquery
test/VectorInstructions/: extract_element.c  extract_element_symbolic.c  floating_point_ops_constant.c  insert_element.c  insert_element_symbolic.c  integer_ops_constant.c  integer_ops_signed_symbolic.c  integer_ops_unsigned_symbolic.c  shuffle_element.c
test/regression/: 2007-07-25-invalid-stp-array-binding-to-objectstate.c  2007-07-30-unflushed-byte.c  2007-08-01-bool-zext-in-call.ll  2007-08-01-cache-unclear-on-overwrite-flushed.c  2007-08-06-64bit-shift.c  2007-08-06-access-after-free.c  2007-08-08-free-zero.c  2007-08-16-invalid-constant-value.c  2007-08-16-valid-write-to-freed-object.c  2007-10-11-free-of-alloca.c  2007-10-11-illegal-access-after-free-and-branch.c  2007-10-12-failed-make-symbolic-after-copy.c  2014-09-13-debug-info.c  (+22 more)
unittests/: CMakeLists.txt
(+46 files in other folders)
